Fix distance padding overlay for mobile, change row-gap for feature section

--- a/css/styles.css
+++ b/css/styles.css
@@ -404,7 +404,7 @@ img {
         flex-wrap: wrap;
         flex-direction: row;
         gap: 0;
-        row-gap: 24px; 
+        row-gap: 76px;
     }
 }
 
@@ -1006,12 +1006,13 @@ img {
 
 .modal {
     min-width: 288px;
+    max-width: 400px;
     width: 100%;
     min-height: 623px;
     position: absolute;
-    top: 8px;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     overflow-y: auto;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background-color: #fcfcfc;
